<resources>
    <string name="app_name">SearchTAS</string>
    <!--Default Values strings-->
    <string name="default_url_teknei">http://192.168.1.200:28080/BIDServer/</string>
    <!--LogIn LogOut Load Strings-->
    <string name="get_user_log_in">Autenticando</string>
    <string name="message_log_out">Saliendo</string>
    <string name="message_title_logout">Salir de la aplicación</string>
    <string name="message_message_logout">Al salir de la aplicación la sesión actual se cerrará.\n¿Desea salir de la aplicación?</string>
    <string name="message_cancel_operation_title">Cancelar operación</string>
    <string name="message_cancel_operation">Cancelando operación</string>
    <string name="message_cancel_operation_alert">La operación actual será cancelada y regresarás a la pantalla principal\n¿Desea cancelar la operación actual?</string>
    <!--LogIn Activity string-->
    <string name="tv_user_login">Usuario</string>
    <string name="tv_hint_user_login">Usuario</string>
    <string name="tv_pass_login">Contraseña</string>
    <string name="tv_hint_pass_login">Contraseña</string>
    <string name="b_in_login">Ingresar</string>
    <!--Server strings-->
    <string name="message_ws_notice">Aviso</string>
    <string name="message_ws_tray_again">Reintentar</string>
    <string name="message_ws_no_internet">No tienes conexi\u00F3n a internet</string>
    <string name="message_ws_petition_fail">Ocurri\u00F3 un error al establecer conexi\u00F3n con el servidor</string>
    <string name="message_ws_response_fail">La operación no puede ser procesada por el servidor</string>
    <string name="message_ws_response_300">300 - El archivo se encuentra en otra direcci\u00F3n</string>
    <string name="message_ws_response_400">400 - La consulta no puede ser procesada</string>
    <string name="message_ws_response_500">500 - No se pudo consultar el servidor</string>
    <!--Alert Dialog strings-->
    <string name="continue_message_dialog">Continuar</string>
    <string name="cancel_message_dialog">Cancelar</string>
    <string name="message_dialog">Mensaje</string>
    <!--Form strings-->
    <string name="form_activity_name">Formulario</string>
    <string name="required_text_form">* Campos obligatorios</string>
    <string name="instructions_form">Ingresa los campos obligatorios y presiona el botón buscar, para iniciar la consulta.</string>
    <string name="name_form">Nombre(s)</string>
    <string name="tv_curp_form">* CURP</string>
    <string name="search_form">Buscar</string>
    <string name="message_search_curp_operation">Buscando coincidencias</string>
    <!--Finger Scan strings-->
    <string name="finger_scan_activity_name">Huella dactilar</string>
    <string name="instructions_finger_scan">Presiona el botón gris, para comenzar la captura de la huella dactilar</string>
    <string name="search_finger_scan">Comprobar identidad</string>
    <string name="message_search_finger_operation">Buscando coincidencias</string>
    <!--Finger Dialog-->
    <string name="tv_title_finger_dialog">Esperando Escaneo</string>
    <string name="tv_message_finger_dialog">Coloca el dedo en el escaner biométrico mientras la luz roja esta encendida.</string>
    <string name="b_cancel_finger_dialog">Cancelar</string>

    <!--Result Strings-->
    <string name="result_activity_name">Resultado de consulta</string>
    <string name="message_result_search_operation">Obteniendo archivos</string>
    <string name="message_get_timestamp_operation">Obteniendo tiempos</string>
    <string name="button_new_result_search_operation">Nueva busqueda</string>

    <!--Settings strings-->
    <string name="settings_activity_name">Ajustes</string>
    <string name="tv_url_server_teknei_settings">Url servidor Teknei</string>
    <string name="b_update_settings">Actualizar</string>
</resources>
