<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/b_continue_form"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/horizontal_margin_form"
        android:layout_marginRight="@dimen/horizontal_margin_form"
        android:layout_marginTop="@dimen/margin_top_form"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/instructions_form"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/required_text_form"
            android:textSize="@dimen/notice_required_form" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_vertical_separator_form"
            android:text="@string/name_form" />

        <EditText
            android:id="@+id/et_name_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:inputType="text"
            android:maxLength="30"
            android:maxLines="1" />
        <TextView
            android:id="@+id/tv_curp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_separator_form"
            android:text="@string/tv_curp_form" />

        <EditText
            android:id="@+id/et_curp_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:inputType="textCapCharacters"
            android:maxLength="18"
            android:maxLines="1"
            />
    </LinearLayout>
    <Button
        android:id="@+id/b_continue_form"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_form"
        android:layout_alignParentBottom="true"
        android:text="@string/search_form"
        android:textColor="@color/text_color_white"
        android:background="@drawable/selector_primary_button"/>
</RelativeLayout>
